--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ thiserror = "2"
 csv = "1"
 serde = "1"
 serde_derive = "1"
+serde_json = "1"
 itertools = "0.10"
 sysinfo = "0.26"
 const_format = "0.2"
